# LicenseSentinel

./: .gitattributes  .gitconfig  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  behave.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sbom.spdx.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: user-story--goal-.md
.github/workflows/: append_coverage_report.yml  cache_dependencies.yml  ci.yml  enforce_pr_strategy.yml  generate_coverage.yml  generate_reports.yml  pylint.yml  sbom.yml  setup_venv.yml
Entities/: pipyMetadata.py
Infrastructure/: PyPiClient.py
Scripts/: logger_formatter.py
analyzer/: license_compatibility_analyzer.py  main.py  packageMetadataFetcher.py
doc/: ARCHITECTURE.md
src/: licensesentinel.py  repo_downloader.py  requirements-dev.txt  requirements.txt  temp.py  temp_copy.py
src/Analyzer/: MetadataFetcher.py
src/Entities/: pipyMetadata.py
src/Infrastructure/: PyPiClient.py
src/analyzer/: dep_tree_builder.py  license_comparator.py  license_compatibility_analyzer.py  license_name_normalizer.py  main.py  matrix_manager.py  package_metadata_fetcher.py  scratch.py  tree_license_analyzer.py
src/entities/: abstract_dep_tree_builder.py  abstract_license_comparator.py  abstract_pypi_client.py  abstract_repo_downloader.py  package_manager_fetcher.py  package_metadata.py  pypi_metadata.py  scan_engine.py  scancode_results.py
src/infrastructure/: connectivity.py  dep_tree_builder.py  license_name_normalizer.py  logger_formatter.py  pypi_client.py  repo_downloader.py  scancode_runner.py
src/interface/: controller.py  gui.py  style.css  ui_state.py
src/license_sentinel/: licensesentinel.py  temp.py
src/scripts/: check_coverage.sh  check_layers.py  clean.py  create_coverage_report.sh  git-merge-keep-theirs.sh  logger_formatter.py  sbom_generator.py  venv_setup.py
test/behave/: environment.py  license_comparator.feature  license_compat.feature  license_matrix.feature  license_reporting.feature
test/reports/: TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110114336.xml  TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110114341.xml  TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110114739.xml  TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110114741.xml  TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110115444.xml  TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110115446.xml  TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110120307.xml  TEST-test.unittest.analyzer.test_license_analyzer.TestLicenseCompatibilityAnalyzer-20260110120309.xml  (+79 more)
test/whitebox/: generate_graphs.py  log.txt
(+652 files in other folders)
